
The following changes were made in 4.5.5 since 4.5.3 release:

2003-10-16  Francois Dumont

  * _alloc.h: Add of the throw() specification on allocator comparision.
  * _iterator.h: Correction of the operator++(int) signature to conform to the standard.
  * _ctype.h: tolower and toupper for wchar_t types.
  * _valarray.h: gslice_array::operator = (const value_type&) not const anymore
  * _valarray.h: slice_array idem
  * _valarray.h: valarray<T> operator [](const gslice&) former version was taking a copy of gslice
  * _codecvt.h : correction of the default codecvt class definition and correction of the out method
    (all thanks Richard Peng)
    
2003-10-16  Francois Dumont

  * debug/: add of the iterator range check on all container constructors.

  * _string.h: correction of a bug on string auto referencing throught some
  method like insert and replace. (thanks Tanaka)

  * _valarray.h: correction of the missing slice_array copy constructor and assignment
  operator in the private section (thanks Tanaka)

2003-10-11  Petr Ovchenkov

  * _sstream.c: [io]?stringstream must do equivalent of seek at end,
  after opened with ios_base::ate; this behaviour useful only when buffer
  initialized by string (thanks Tanaka)
	
2003-10-07  Francois Dumont

  * _[i,o]streambuf_iterator.h: correction of the missing iterator base class
  (Thanks Tanaka)
  
  ----
  

  * _string.h: correction of the replace implementation badling form for self referencing 
               (thanks Francois Dumont)

  ----

  * _string.h .c: Modifiction of the _M_copy method to _M_move as basic_string do not correctly handled
                  self referecing (thanks Tanaka).
             
  ----
  
  * como 4.3.0 on linux support (thanks Synge Todo and Karel Gardas)
  
  ----
  
  * Quazy-leak patch: make memory detection tools happier, option _STLP_LEAKS_PEDANTIC in _site_config.h.
                  (thanks Petr Ovchenkov)
  
  ----
  